# mini-rag-runner

./: .gitignore  Dockerfile  README.md  defaults-light.env  defaults.env  docker-compose-light.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: defaults-mini.env  docker-compose-mini.yml
samples/: m-ship-short.md  m-ship.md
samples/results/: analyze.py
samples/results/mathusla-ship/: entity_info-3-tries.xlsx  entity_info-41-mini-1200.md  entity_info-41-mini-1200.xlsx  entity_info-41-mini-600.xlsx  entity_info-41-nano-1200.md  entity_info-41-nano-1200.xlsx  entity_info-41-nano-600.md  entity_info-41-nano-600.xlsx  entity_info-4o-mini-600.md  entity_info-4o-mini-600.xlsx  entity_info-4o-mini-long.md  entity_info-4o-mini-original.md  entity_info-4o-mini.md  entity_info-4o-mini.xlsx  entity_info-phi4-600.md  entity_info-phi4-600.xlsx
src/mini_rag_runner/: __init__.py  light_entity_tester.py  light_rag_runner.py  mcp_runner.py
src/mini_rag_runner/results/mathusla-ship/: entity_info-3-tries.md  entity_info-41-mini-600.md  entity_info-4o-mini-long.xlsx
